# tadeusz

./: Cargo.toml  Modelfile  README.md  build.rs  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/tools/: web_fetch.rs  web_search.rs
api/tool/src/: lib.rs
api/tool_derive/src/: lib.rs
frontend/: index.html
nginx/: nginx.conf
searxng/: Dockerfile  entrypoint.sh  settings.yml
src/: ansi.rs  error.rs  main.rs
src/tools/: mod.rs  registry.rs  web_fetch.rs  web_search.rs
tool/: Cargo.toml
tool/src/: lib.rs  registry.rs
tool_derive/: Cargo.toml
tool_derive/src/: lib.rs
