[package]
name = "tadeusz"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bytes = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
