[package]
name = "tadeusz"
version = "0.1.0"
edition = "2024"

[dependencies]
tool = { path = "./tool" }
duckduckgo = "0.3.1"
openrouter-rs = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.52.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"
inventory = "0.3.24"
async-trait = "0.1.89"
thiserror = "2.0.18"

[workspace]
members = [".", "tool", "tool_derive"]
resolver = "2"
