[package]
name = "tadeusz"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "tadeusz"
path = "src/main.rs"

[dependencies]
tool = { path = "./tool" }
openrouter-rs = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
urlencoding = "2.1.3"
inventory = "0.3.24"
async-trait = "0.1.89"
thiserror = "2.0.18"
fast_html2md = "0.0.61"
axum = "0.8.9"
async-stream = "0.3.6"
futures-util = "0.3.32"
tokio-stream = "0.1.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[workspace]
members = [".", "tool", "tool_derive"]
resolver = "2"
